--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -36,7 +36,7 @@ management:
     logging:
       export:
         enabled: true
-      endpoint: "http://localhost:3100/otlp/v1/logs"
+      endpoint: "https://plaz-monitoring-loki.sandbox.cloud.stemys.ch/otlp/v1/logs"
 otel:
   metric:
     export:
@@ -50,7 +50,7 @@ otel:
         endpoint: "http://localhost:4318/v1/traces"
         protocol: http/protobuf
       logs:
-        endpoint: "http://localhost:3100/otlp/v1/logs"
+        endpoint: "https://plaz-monitoring-loki.sandbox.cloud.stemys.ch/otlp/v1/logs"
         protocol: http/protobuf
   instrumentation:
     common:
