--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-springCloudVersion=2024.0.0
-otelBomVersion=2.12.0
+springCloudVersion=2025.0.0
+otelBomVersion=2.19.0
 
 withDockerCompose=false
 sonarHostUrl=https://sonarcloud.io
 sonarOrganization=stemys
 
-nexusUrl=https://nexus.sandbox.cloud.stemys.ch
+nexusUrl=https://nexus.org.cloud.stemys.ch
 
 eclipseReleaseRepository=https://repo.eclipse.org/content/groups/releases/
 
